themes page in progress

--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
         "vue-template-compiler": "^2.6.14"
     },
     "dependencies": {
+        "chart.js": "^3.4.1",
         "font-awesome": "^4.7.0"
     }
 }
